fixed project config issues, updated schema and implemented dispatcher pattern

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,7 @@ dependencies = [
     "google-generativeai>=0.8.6",
     "networkx>=3.6.1",
     "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
+    "python-dotenv>=1.2.1",
     "tree-sitter>=0.25.2",
 ]
